[gd_scene format=3 uid="uid://dwghrpbxefkax"]

[ext_resource type="Script" uid="uid://bqesf1yi7t0tf" path="res://scenes/testscene2/tilemapcheckgen.gd" id="1_eynfe"]
[ext_resource type="TileSet" uid="uid://rc7plds60u7s" path="res://scenes/rooms/Rooms/roomtiles.tres" id="3_3hgal"]
[ext_resource type="Script" uid="uid://bano66v0h3idb" path="res://scenes/testscene2/map_generator_modular.gd" id="3_araiu"]

[node name="MAIN Pet Dungeon" type="Node2D" unique_id=957214115]
script = ExtResource("1_eynfe")

[node name="FogWar" parent="." unique_id=24457551 instance=ExtResource("2_araiu")]

[node name="TileMapLayer" parent="." unique_id=234032575 instance=ExtResource("3_hgfm7")]

[node name="World2" type="Node2D" parent="." unique_id=575778532]
visible = false
script = ExtResource("3_araiu")

[node name="World1" type="Node2D" parent="." unique_id=314138952]
visible = false
script = ExtResource("3_araiu")

[node name="World3" type="Node2D" parent="." unique_id=214134837]
visible = false
script = ExtResource("3_araiu")

[node name="ColorFilter" type="ColorRect" parent="." unique_id=1657231590]
z_index = 1000
offset_left = -4511.0
offset_top = -2610.0
offset_right = 4692.0
offset_bottom = 3093.0
color = Color(0, 1, 1, 0.14117648)
